added search icon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <button type="button" class="btn">Customer</button>
 
             <div class="search-container">
+                <img src="Search.svg" id="search" alt="Search icon">
+
                 <input type="text" class="search" placeholder="Search">
 
                 <button type="button" class="transact-btn">New Transaction</button>
